examples/test/testpolicy17217.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17217
  namespace: namespace195
spec:
  podSelector:
    matchLabels:
      key41: value30
      key12: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value36
          key31: value36
          key12: value23
      podSelector:
        matchLabels:
          key37: value28
          key45: value11
